<resources>
    <string name="app_name">Calculate Now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculate Now</string>
    <string name="nav_header_subtitle">App by Madhav</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="grade_prompt">Choose a Grade</string>

    <string-array name="grade_class">
        <item>S</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>NULL</item>

    </string-array>

    <string name="submit">Submit</string>


    <string name="credit_prompt">Choose a Credit</string>
    <string-array name="credit_class">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>NULL</item>
    </string-array>

    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_2">5</string>
    <string name="select_grade">Grade</string>
    <string name="your_grade_point">Grade Point</string>
    <string name="Credits">Credits</string>
    <string name="button">RESET</string>
    <string name="madeapp">App by Madhav</string>
    <string name="name">Your SGPA</string>
    <string name="app_by_madhav">App by Madhav</string>

    <string name="calc">CALCULATE</string>
    <string name="res">RESET</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello First fragment</string>
    <string name="hello_blank_fragment2">Hello Second fragment</string>
    <string name="he">he</string>
</resources>
