<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="135dp"

            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/second"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Credits"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"

                tools:text="Credits" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#000000" />

            <Spinner

                android:id="@+id/c_spinner1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"

                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />


            <Spinner

                android:id="@+id/c_spinner2"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"
                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />

            <Spinner

                android:id="@+id/c_spinner3"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"
                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />


            <Spinner

                android:id="@+id/c_spinner4"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"
                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />


            <Spinner

                android:id="@+id/c_spinner5"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"
                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />


            <Spinner

                android:id="@+id/c_spinner6"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"
                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />

            <Spinner

                android:id="@+id/c_spinner7"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_margin="2.5dp"
                android:entries="@array/credit_class"
                android:padding="10dp"
                android:prompt="@string/credit_prompt"
                tools:layout_height="wrap_content" />

            <TextView
                android:id="@+id/credit_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical|center_horizontal|center"
                android:layout_marginTop="14dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:paddingLeft="45dp"

                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                tools:text="25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="1.5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/select_grade"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#000000" />

            <Spinner

                android:id="@+id/g_spinner1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"

                android:spinnerMode="dropdown" />


            <Spinner

                android:id="@+id/g_spinner2"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"
                android:saveEnabled="true"
                android:spinnerMode="dropdown" />


            <Spinner

                android:id="@+id/g_spinner3"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"
                android:spinnerMode="dropdown" />

            <Spinner

                android:id="@+id/g_spinner4"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"
                android:spinnerMode="dropdown" />

            <Spinner

                android:id="@+id/g_spinner5"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"
                android:spinnerMode="dropdown" />


            <Spinner

                android:id="@+id/g_spinner6"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"
                android:spinnerMode="dropdown" />

            <Spinner

                android:id="@+id/g_spinner7"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="2.5dp"
                android:entries="@array/grade_class"
                android:padding="10dp"
                android:prompt="@string/grade_prompt"
                android:spinnerMode="dropdown" />


            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical|center_horizontal|center"

                android:text="@string/button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="1.5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:text="@string/your_grade_point"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                tools:text="Grade Point" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#000000" />


            <TextView
                android:id="@+id/sub_point_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.6dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                android:id="@+id/sub_point_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                android:id="@+id/sub_point_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.0dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/sub_point_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.2dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                android:id="@+id/sub_point_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.0dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                android:id="@+id/sub_point_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.0dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/sub_point_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.0dp"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView

                android:id="@+id/sub_point_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_margin="1.0dp"
                android:gravity="center"

                android:padding="10dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                tools:text="25" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/second"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/sgpa_text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center_vertical|fill_vertical|center"
                android:inputType="textPersonName"
                android:maxLength="12"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.Large.Inverse"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                tools:text="Your SGPA"
                tools:textColor="?android:attr/statusBarColor" />

        </LinearLayout>


    </RelativeLayout>




</FrameLayout>